# lib3mf

./: CMakeLists.txt
Include/Common/OPC/: NMR_OpcPackageReader.h
Include/Common/Platform/: NMR_ImportStream_ZIP.h
Source/Model/COM/: NMR_DLLInterfaces.cpp
